Added skeletons for all pages

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,7 +3,16 @@
     width: 100%;
 
     .carousel {
-        height: 50%;
         width: 100%;
+    }
+
+    .home-intro {
+        text-align: center;
+        font-size: 30px;
+    }
+
+    .home-about {
+        font-size: 20px;
+        margin: 50px;
     }
 }
