--- a/src/components/imageCard/imageCard.scss
+++ b/src/components/imageCard/imageCard.scss
@@ -1,7 +1,7 @@
-.carousel-card {
+.image-card {
     position: relative;
 
-    .carousel-image {
+    .image-image {
         width: 100%;
         object-fit: cover;
         
@@ -14,7 +14,7 @@
         }
     }
 
-    .carousel-content {
+    .image-content {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -33,7 +33,7 @@
             width: 50%;
         }
 
-        .carousel-title {
+        .image-title {
             position: absolute;
             left: 50%;
             transform: translateX(-50%) translateY(-50%);
@@ -43,7 +43,7 @@
             top: 25%;
         }
     
-        .carousel-subtitle {
+        .image-subtitle {
             position: absolute;
             left: 50%;
             transform: translateX(-50%) translateY(-50%);
