--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,11 +1,86 @@
 .about {
-    .intro-message {
-        text-align: center;
-        font-size: 40px;
+    .container-even {
+        background-color: #ffffff;
     }
 
-    .content {
-        margin: 50px;
+    .container-odd {
+        background-color: #eaeaea;
+    }
+
+    .about-title {
+        font-size: 40px;
+        color: #820000;
+        text-align: left;
+    }
+
+    .about-container {
+        padding: 50px;
+    }
+
+    .favourites-title {
+        text-align: center;
+    }
+
+    .favourites-info {
+        @media screen and (max-width: 600px) {
+            padding: 50px 0px;
+        }
+
+        @media screen and (min-width: 600px) {
+            padding: 50px 100px;
+        }
+        
+        font-size: 24px;
+        text-align: center;
+    }
+
+    .who-info {
+        padding: 50px 0px;
         font-size: 20px;
+    }
+
+    .projects-info {
+        padding: 50px 0px;
+        font-size: 20px;
+    }
+
+    .projects-pictures {
+        display: inline-flex;
+        text-align: center;
+        width: 100%;
+        position: relative;
+
+        .pictures {
+            width: 98%;
+            height: 200px;            
+        }
+    }
+
+    .projects-link {
+        text-align: center;
+    }
+
+    .resume-info {
+        padding: 50px 0px;
+        font-size: 20px;
+    }
+
+    .resume-link {
+        text-align: center;
+    }
+
+    .link-button {
+        padding: 10px 20px;
+        font-size: 30px;
+        text-decoration: none;
+        background-color: #0000002e;
+        border-radius: 10px;
+        color: #fff;
+        border: 2px solid #404040;
+
+        &:hover, &:active {
+            background-color: #fff;
+            color: #000;
+        }
     }
 }
