--- a/src/pages/layout/footer/footer.scss
+++ b/src/pages/layout/footer/footer.scss
@@ -1,9 +1,11 @@
 .footer {
+    height: 150px;
     width: 100%;
     background-color: #000000;
     text-align: center;
 
     .footer-links {
+        height: 75%;
         display: inline-flex;
         flex-flow: row wrap;
         align-content: space-evenly;
@@ -22,6 +24,7 @@
     }
     
     .footer-text {
-        color: #fff;
+        color: #9c9c9c;
+        font-size: 14px;
     }
 }
