--- a/src/pages/layout/header/header.scss
+++ b/src/pages/layout/header/header.scss
@@ -43,3 +43,25 @@
         }
     }
 }
+
+.drawer-container {
+    background-color: #000000bb !important;
+    text-align: center;
+    padding: 20px;
+    border-bottom: 2px solid #828282;
+
+    .drawer-link-text {
+        font-size: 24px;
+        text-decoration: none;
+        color: #fff;
+    }
+
+    .drawer-link-button {
+        padding: 14px;
+        border-top: 1px solid #565656;
+    }
+
+    .active {
+        background-color: #ffef0059;
+    }
+}
