Updated page stylings

--- a/src/components/imageCard/imageCard.scss
+++ b/src/components/imageCard/imageCard.scss
@@ -1,5 +1,8 @@
 .image-card {
     position: relative;
+    padding: 0 !important;
+    text-transform: none !important;
+    font-family: 'Overlock', cursive !important;
 
     .image-image {
         width: 100%;
