--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -21,7 +21,14 @@
     }
 
     .home-container {
-        padding: 50px;
+        @media screen and (max-width: 600px) {
+            padding: 14px;
+            padding-bottom: 30px;
+        }
+
+        @media screen and (min-width: 600px) {
+            padding: 50px;
+        }
     }
 
     .home-intro {
