--- a/src/pages/projectPages/projectTemplate.scss
+++ b/src/pages/projectPages/projectTemplate.scss
@@ -18,9 +18,10 @@
     }
 
     .link {
+        width: 90%;
         text-align: left;
-        margin-left: 30px;
-        font-size: 20px;    
+        margin-left: 5%;
+        font-size: 20px;  
 
         a {
             color: #3a61ad;
@@ -35,7 +36,7 @@
         font-size: 24px;
 
         @media screen and (max-width: 600px){
-            padding: 30px;
+            padding: 20px;
         }
 
         @media screen and (min-width: 600px){
