--- a/src/pages/resume/resume.scss
+++ b/src/pages/resume/resume.scss
@@ -1,6 +1,13 @@
 .resume {
     .resume-container {
-        padding: 40px;
+        @media screen and (max-width: 600px) {
+            padding: 14px;
+            padding-bottom: 30px;
+        }
+
+        @media screen and (min-width: 600px) {
+            padding: 40px;
+        }
     }
 
     .container-even {
@@ -24,7 +31,13 @@
         }
 
         .experience-container {
-            padding: 50px 0px;
+            @media screen and (max-width: 600px) {
+                padding: 20px 0px;
+            }
+    
+            @media screen and (min-width: 600px) {
+                padding: 50px 0px;
+            }
 
             .experience-company {
                 font-size: 20px;
@@ -41,7 +54,13 @@
         }
 
         .education-container {
-            padding: 50px 0px;
+            @media screen and (max-width: 600px) {
+                padding: 20px 0px;
+            }
+    
+            @media screen and (min-width: 600px) {
+                padding: 50px 0px;
+            }
 
             .education-school {
                 font-size: 20px;
