--- a/src/pages/resume/resume.scss
+++ b/src/pages/resume/resume.scss
@@ -15,7 +15,7 @@
     }
 
     .container-odd {
-        background-color: #eaeaea;
+        background-color: #eaeaea88;
     }
 
     .resume-title {
