--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -5,4 +5,18 @@
         text-align: center;
         font-size: 40px;
     }
+
+    .portfolio-intro {
+        font-size: 20px;
+        padding: 20px 0px;
+
+        @media screen and (max-width: 600px) {
+            padding: 14px;
+            padding-bottom: 30px;
+        }
+
+        @media screen and (min-width: 600px) {
+            padding: 50px;
+        }
+    }
 }
