--- a/src/pages/projectPages/projectTemplate.scss
+++ b/src/pages/projectPages/projectTemplate.scss
@@ -1,26 +1,37 @@
 .project {
     .image {
-        width: 100%;
+        width: 90%;
         margin-top: 30px;
+        margin-left: 5%;
     }
 
     .image-caption {
         text-align: right;
-        margin-right: 20px;
+        margin-right: 5%;
         font-size: 14px;
-        margin-bottom: 50px;
+
+        @media screen and (min-width: 600px){
+            margin-bottom: 50px;
+        }
     }
 
     .title {
-        font-size: 60px;
         padding: 20px;
         color: #9a2121;
+
+        @media screen and (max-width: 600px){
+            font-size: 50px;
+        }
+
+        @media screen and (min-width: 600px){
+            font-size: 60px;
+        }
     }
 
     .link {
         width: 90%;
         text-align: left;
-        margin-left: 5%;
+        margin-left: 20px;
         font-size: 20px;  
 
         a {
@@ -33,15 +44,8 @@
     }
 
     .paragraph {
-        font-size: 24px;
-
-        @media screen and (max-width: 600px){
-            padding: 20px;
-        }
-
-        @media screen and (min-width: 600px){
-            padding: 50px;
-        }
+        font-size: 20px;
+        padding: 20px;
     }
 }
 
@@ -55,7 +59,14 @@
         color: #000e38;
         display: inline-flex;
         align-items: center;
-        font-size: 24px;
+
+        @media screen and (max-width: 600px){
+            font-size: 18px;
+        }
+
+        @media screen and (min-width: 600px){
+            font-size: 24px;
+        }
         
         &:hover, &:active {
             color: #bfbfbf;
