Updated current job

--- a/src/pages/layout/body/body.scss
+++ b/src/pages/layout/body/body.scss
@@ -1,4 +1,4 @@
 .body {
     width: 100%;
-    background-image: repeating-linear-gradient(170deg, #00000001, #ffffff33 1%, #00000001 2%);
+    background-color: #f0ffff;
 }
